--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,9 @@
       <option value="4">只顯示住宅和公寓</option>
       
     </select>
-    <table class="infoPanel">
-      <tbody>
-        <tr>
-          <td>請點選一棟建築，周圍建築 會根據 選取建築 的距離呈現不同顏色</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="infoPanel">
+      <td>請點選一棟建築，周圍建築 會根據 選取建築 的距離呈現不同顏色</td>
+    </div>
   </div>
 </body>
 </html>
